# bazel-rpm

./: .gitignore  .rpmlintrc  LICENSE  MODULE.bazel  README.md  metadata.json
.bcr/: attestations.template.json  metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: ci.yml  publish.yml  release.yml  release_prep.sh
examples/complex_package/: BUILD.bazel  README.txt  app.conf  base.cpp  base.h  calculator.cpp  helper.cpp  main.cpp  math.cpp  math.h  test_headers.cpp  utils.cpp
examples/complex_package/subdir/: utils.cpp  utils.h
examples/gtk_example/: BUILD.bazel  MODULE.bazel  main.c
examples/simple_binary/: BUILD.bazel  main.cpp
rpm/: BUILD.bazel  defs.bzl
rpm/private/: BUILD.bazel  rpm_rule.bzl
rpm/private/templates/: BUILD.bazel  build_rpm.sh.tpl  copy_file.sh.tpl  stage_binaries.sh.tpl  stage_configs.sh.tpl  stage_data.sh.tpl  stage_files.sh.tpl  stage_headers.sh.tpl  stage_libraries.sh.tpl
tests/: BUILD.bazel
toolchains/: BUILD.bazel  extensions.bzl  rpm_toolchain.bzl
