load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//rpm:defs.bzl", "rpm_package")

package(default_testonly = True)

# Test that the simple example builds
build_test(
    name = "simple_binary_test",
    targets = ["//examples/simple_binary:hello_world_rpm"],
)

# Test that the complex example builds
build_test(
    name = "complex_package_test",
    targets = ["//examples/complex_package:complex_app_rpm"],
)

# Unit test RPM with minimal configuration
rpm_package(
    name = "test_minimal_rpm",
    binaries = ["//examples/simple_binary:hello_world"],
    version = "0.0.1",
    testonly = True,
)

build_test(
    name = "minimal_rpm_test",
    targets = [":test_minimal_rpm"],
)