load(":rpm_toolchain.bzl", "rpm_toolchain")

package(default_visibility = ["//visibility:public"])

toolchain_type(
    name = "rpm_toolchain_type",
    visibility = ["//visibility:public"],
)

rpm_toolchain(
    name = "linux_x86_64_toolchain",
    rpmbuild = "@rpm_toolchain//:rpmbuild",
)

toolchain(
    name = "linux_x86_64",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":linux_x86_64_toolchain",
    toolchain_type = ":rpm_toolchain_type",
)
