load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//rpm:defs.bzl", "rpm_package")

cc_library(
    name = "base",
    srcs = ["base.cpp"],
    hdrs = ["base.h"],
)

cc_library(
    name = "utils",
    srcs = ["utils.cpp"],
    hdrs = ["utils.h"],
)

cc_library(
    name = "subdir_utils",
    srcs = ["subdir/utils.cpp"],
    hdrs = ["subdir/utils.h"],
)

cc_library(
    name = "math",
    srcs = ["math.cpp"],
    hdrs = ["math.h"],
    deps = [":base"],  # math depends on base
)

cc_binary(
    name = "main_app",
    srcs = ["main.cpp"],
    deps = [":utils"],
)

cc_binary(
    name = "helper_tool",
    srcs = ["helper.cpp"],
    deps = [":utils"],
)

cc_binary(
    name = "calculator",
    srcs = ["calculator.cpp"],
    deps = [":math"],
)

rpm_package(
    name = "complex_app_rpm",
    binaries = [
        ":main_app",
        ":helper_tool",
        ":calculator",
    ],
    libraries = [
        ":utils",
        ":subdir_utils",
        ":math",
    ],
    configs = [
        "app.conf",
        "logging.xml",
    ],
    data = ["README.txt"],
    version = "2.1.0",
    summary = "Complex application with multiple components",
    description = "A complex application demonstrating multiple binaries, libraries, and configuration files",
    config_dir = "/etc/complex_app",
    data_dir = "/usr/share/complex_app",
)