load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//rpm:defs.bzl", "rpm_package")

cc_library(
    name = "base",
    srcs = ["base.cpp"],
    hdrs = ["base.h"],
    copts = ["-g"],  # Add debug info for RPM packaging
)

cc_library(
    name = "utils",
    srcs = ["utils.cpp"],
    hdrs = ["utils.h"],
    copts = ["-g"],  # Add debug info for RPM packaging
)

cc_library(
    name = "subdir_utils",
    srcs = ["subdir/utils.cpp"],
    hdrs = ["subdir/utils.h"],
    copts = ["-g"],  # Add debug info for RPM packaging
)

cc_library(
    name = "math",
    srcs = ["math.cpp"],
    hdrs = ["math.h"],
    copts = ["-g"],  # Add debug info for RPM packaging
    deps = [":base"],  # math depends on base
)

cc_binary(
    name = "main_app",
    srcs = ["main.cpp"],
    deps = [":utils"],
)

cc_binary(
    name = "helper_tool",
    srcs = ["helper.cpp"],
    deps = [":utils"],
)

cc_binary(
    name = "calculator",
    srcs = ["calculator.cpp"],
    deps = [":math"],
)

# Example with transitive headers disabled (default - recommended)
# Note: cc_library targets use copts = ["-g"] to generate debug info
# This prevents "static-library-without-debuginfo" rpmlint errors
rpm_package(
    name = "complex_app_rpm",
    binaries = [
        ":main_app",
        ":helper_tool",
        ":calculator",
    ],
    config_dir = "/etc/complex_app",
    configs = [
        "app.conf",
        "logging.xml",
    ],
    data = ["README.txt"],
    data_dir = "/usr/share/complex_app",
    description = "Complex application with multiple components and libraries",
    group = "Development/Tools",
    libraries = [
        ":utils",
        ":subdir_utils",
        ":math",
    ],
    packager = "Example Corp <maintainer@example.com>",
    summary = "Complex application with multiple components",
    url = "https://github.com/example/complex-app",
    vendor = "Example Corporation",
    version = "2.1.0",
    # include_transitive_headers = False,  # Default - only direct headers
)

# Example with transitive headers enabled (for comparison)
rpm_package(
    name = "complex_app_rpm_with_transitive",
    binaries = [
        ":main_app",
        ":helper_tool",
        ":calculator",
    ],
    config_dir = "/etc/complex_app",
    configs = [
        "app.conf",
        "logging.xml",
    ],
    data = ["README.txt"],
    data_dir = "/usr/share/complex_app",
    description = "Complex application demonstrating transitive header inclusion",
    include_transitive_headers = True,  # Include all transitive headers
    libraries = [
        ":utils",
        ":subdir_utils",
        ":math",
    ],
    summary = "Complex application with multiple components (with transitive headers)",
    url = "https://github.com/example/complex-app",
    version = "2.1.0",
)
