load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_rpm//rpm:defs.bzl", "rpm_package")

cc_binary(
    name = "gtk_app",
    srcs = ["main.c"],
    deps = ["@system_gtk4//:gtk4"],
)

rpm_package(
    name = "gtk_app_rpm",
    binaries = [":gtk_app"],
    description = "A simple GTK4 application demonstrating GUI packaging with dependencies",
    requires = [
        "gtk4",
    ],
    summary = "Simple GTK4 application",
    url = "https://github.com/example/gtk-app",
    version = "1.0.0",
)
