module(
    name = "gtk_example",
    version = "0.0.0",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_rpm", version = "")
local_path_override(
    module_name = "rules_rpm",
    path = "../.."
)

# Local system dependencies for GTK example
new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

new_local_repository(
    name = "system_gtk4",
    build_file = "//third_party:system_gtk4.BUILD",
    path = "/usr",
)

new_local_repository(
    name = "system_glib2",
    build_file = "//third_party:system_glib2.BUILD",
    path = "/usr",
)

new_local_repository(
    name = "system_cairo",
    build_file = "//third_party:system_cairo.BUILD",
    path = "/usr",
)

new_local_repository(
    name = "system_pango",
    build_file = "//third_party:system_pango.BUILD",
    path = "/usr",
)

new_local_repository(
    name = "system_gdk_pixbuf",
    build_file = "//third_party:system_gdk_pixbuf.BUILD",
    path = "/usr",
)

new_local_repository(
    name = "system_harfbuzz",
    build_file = "//third_party:system_harfbuzz.BUILD",
    path = "/usr",
)

new_local_repository(
    name = "system_graphene",
    build_file = "//third_party:system_graphene.BUILD",
    path = "/usr",
)