load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//rpm:defs.bzl", "rpm_package")

cc_binary(
    name = "hello_world",
    srcs = ["main.cpp"],
)

rpm_package(
    name = "hello_world_rpm",
    binaries = [":hello_world"],
    version = "1.0.0",
    summary = "Simple Hello World application",
    description = "A simple Hello World application packaged as RPM",
)